--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
-# remove.bg API
-REMOVE_BG_API_KEY=your-removebg-api-key
-REMOVE_BG_API_URL=https://api.remove.bg/v1.0/removebg
-REMOVE_BG_MAX_FILES=50
-REMOVE_BG_TIMEOUT_MS=45000
-
 # Front-end limits (PUBLIC_ 前綴會公開給前端)
 PUBLIC_MAX_FILES=50
+
+# Server limits
+API_MAX_FILES=50
+API_PORT=4001
+API_BODY_LIMIT=41943040
