--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "@astrojs/react": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@fastify/cors": "^9.0.1",
+    "@imgly/background-removal": "^1.4.5",
     "archiver": "^6.0.2",
+    "dotenv": "^16.4.5",
     "fabric": "^6.0.0-beta12",
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
-    "image-size": "^1.1.1",
-    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.5",
-    "undici": "^6.11.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
