--- a/package.json
+++ b/package.json
@@ -1,48 +1,34 @@
 {
-  "name": "avatar-kit",
-  "version": "0.1.0",
+  "name": "avatar-kit-pro",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
-    "dev:astro": "astro dev",
-    "dev:api": "tsx server/index.ts --watch",
-    "build": "astro build",
-    "preview": "astro preview",
-    "start": "npm-run-all --parallel start:*",
-    "start:astro": "astro preview",
-    "start:api": "node dist/server/index.js",
-    "format": "prettier --write ."
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@astrojs/node": "^8.1.0",
-    "@astrojs/react": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@fastify/cors": "^9.0.1",
     "@imgly/background-removal": "^1.4.5",
-    "archiver": "^6.0.2",
-    "dotenv": "^16.4.5",
     "fabric": "^6.0.0-beta12",
-    "fastify": "^4.26.2",
-    "fastify-plugin": "^4.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.5",
-    "zod": "^3.23.8"
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tinycolor2": "^1.6.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
-    "autoprefixer": "^10.4.16",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.3"
-  },
-  "engines": {
-    "node": ">=18.17"
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.8"
   }
 }
